--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next-auth": "^5.0.0-beta.22",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "zod": "^3.23.8"
   },
